codex-rs/tui/src/app/snapshots/codex_tui__app__workflow_controls__tests__workflow_after_turn_trigger_popup.snap
---
source: tui/src/app/workflow_controls.rs
expression: popup
---
  Workflow Trigger
  director · followup · manual.yaml

  Type to search trigger actions
› Back                             Return to the previous workflow menu.
  Edit workflow.yaml               Open manual.yaml in your editor.
  Run Now                          Run this trigger immediately in a background workflow thread.
  Disable Trigger                  Prevent this trigger from starting until it is enabled again.
  Type: After Turn (Success Only)  Choose which trigger type this workflow entry should use.
  Edit Trigger ID                  Rename this trigger id.
  Edit Target Jobs                 1 job
  Edit Run Condition               Current `condition`: `turn_succeeded`.

  Press enter to confirm or esc to go back
