codex-rs/tui/src/app/snapshots/codex_tui__app__workflow_controls__tests__workflow_file_popup.snap
---
source: tui/src/app/workflow_controls.rs
expression: popup
---
  Workflow
  director · manual.yaml

  Type to search workflow actions
› Back                Return to the previous workflow menu.
  Edit workflow.yaml  Open manual.yaml in your editor.
  Jobs                2 jobs
  Triggers            4 triggers

  Press enter to confirm or esc to go back
