codex-rs/tui/src/app/snapshots/codex_tui__app__workflow_controls__tests__workflow_job_popup.snap
---
source: tui/src/app/workflow_controls.rs
expression: popup
---
  Workflow Job
  director · notify · manual.yaml

  Type to search job actions
› Back                                 Return to the previous workflow menu.
  Edit workflow.yaml                   Open manual.yaml in your editor.
  Run Now                              Run this job immediately in a background workflow thread.
  Disable Job                          Prevent triggers from including this job until it is
                                       enabled again.
  Context Strategy: Thread Auto        Cycle how this workflow job uses and reshapes the current
                                       context.
  Execution Strategy: Inherit Session  Cycle how this workflow job inherits or overrides session
                                       execution settings.
  Response: User                       Toggle whether this job replies as assistant output or a
                                       user follow-up.
  Edit Needs                           1 dependency

  Press enter to confirm or esc to go back
