codex-rs/tui/src/app/snapshots/codex_tui__app__workflow_controls__tests__workflow_manual_triggers_popup.snap
---
source: tui/src/app/workflow_controls.rs
expression: popup
---
  Workflow Triggers
  director · manual.yaml

  Type to search triggers
› Back                Return to the previous workflow menu.
  Edit workflow.yaml  Open manual.yaml in your editor.
  review_backlog      Manual · Enabled · Ready
  triage              Manual · Disabled · Ready
  pulse               Interval (30m) · Enabled · Ready

  Press enter to confirm or esc to go back
