codex-rs/tui/src/app/snapshots/codex_tui__app__workflow_controls__tests__workflow_root_popup.snap
---
source: tui/src/app/workflow_controls.rs
expression: popup
---
  Workflow
  Manage workflow files, jobs, and triggers directly.

  Type to search workflows
› Background Tasks                     Insert a background task snapshot into the transcript. /ps
                                       shows the same live workflow state.
  director - edit yaml                 Open manual.yaml in your editor.
  director - job - summarize           Workflow job
  director - job - notify              Workflow job
  director - trigger - review_backlog  Manual · Enabled
  director - trigger - triage          Manual · Disabled
  director - trigger - pulse           Interval (30m) · Enabled
  director - trigger - followup        After Turn (Success Only) · Enabled

  Press enter to confirm or esc to go back
