codex-rs/tui/src/app/snapshots/codex_tui__app__workflow_controls__tests__workflow_root_popup_empty.snap
---
source: tui/src/app/workflow_controls.rs
expression: popup
---
  Workflow
  Manage workflow files, browse jobs, and inspect current background status.

  Type to search workflows
› Background Tasks      Insert a background task snapshot into the transcript. /ps shows the same
                        live workflow state.
  Create workflow.yaml  Create a starter template under .codex/workflows and open it in your
                        editor.

  Press enter to confirm or esc to go back
